# c-compiler

./: .gitignore  Cargo.toml  c  cy  fichier.c  fichier.i  gcc  include2.h  rustfmt.toml
asm/: comp.cmd  comp.ps1  hello-world.asm  loop-hello-world.asm  simplified-hello-world.asm
doc/: build.ps1  errors.tex  erros.tex
docs/: build.ps1  errors.tex  mfile  todo.md
rust_doc/doc/: crates.js  help.html  search-index.js  settings.html  src-files.js
rust_doc/doc/compilo/: all.html  fn.main.html  fn.run_main.html  fn.test_parser.html  index.html  sidebar-items.js
rust_doc/doc/compilo/errors/: enum.GeneralError.html  enum.PreprocessorError.html  index.html  sidebar-items.js  struct.FilePosition.html
rust_doc/doc/compilo/eval/: enum.PreprocessorAst.html  fn.eval_one.html  fn.go_back_in_tokens.html  fn.handle_binary.html  fn.tokens_to_ast.html  fn.tokens_to_ast_impl.html  fn.tokens_to_ast_impl_or_acc3.html  index.html  sidebar-items.js  struct.CurrentTree.html
rust_doc/doc/compilo/parser/: enum.Associativity.html  enum.Bracing.html  enum.NonOpSymbol.html  enum.Operator.html  enum.PreprocessorToken.html  fn.is_not_operator.html  fn.parse_preprocessor.html  fn.token_from_str.html  index.html  sidebar-items.js
rust_doc/doc/compilo/preprocessor/: enum.DirectiveParsingState.html  fn.add_default_macro.html  (+12 more)
src/: arithmetic.rs  errors.rs  eval.rs  expression.rs  expressions.rs  main.rs  parser.rs  preprocessor.rs  reader.rs  structs.rs  ternary.rs  tools.rs
test/: fichier.c  fichier.i  file.c  file.i  gcc.i  include.h  include2.h
tools/: comp.ps1  ollydbg.ini
(+33 files in other folders)
