[package]
name = "compilo"
version = "0.1.0"
edition = "2021"
repository = "https://www.gitlab.com/t-webber/compilo-en-rust"
readme = "docs/README.md"
description = "A compiler for the C language"
keywords = ["compiler", "c", "language"]
categories = ["development-tools", "programming-language"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# [profile.dev.build-override]
# opt-level = 3
